Feat: add partial testing

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -84,7 +84,7 @@
             "value":"dep-6",
             "label":"DEP 6",
             "children": [
-                { "value": "dep-6-part-a", "label": "Who is respondible for witnessing?" },
+                { "value": "dep-6-part-a", "label": "Who is responsible for witnessing?" },
                 { "value": "dep-6-part-b", "label": "Why should we witness?" },
                 { "value": "dep-6-part-c", "label": "How do we witness?" }
             ]
