Fix: resolved CJK non-commit issue, and autosuggestions disappearing

--- a/public/locales/kn/translation.json
+++ b/public/locales/kn/translation.json
@@ -92,7 +92,7 @@
                 { "value": "dep-6-part-b", "label": "왜 전도를 해야 하나?" },
                 { "value": "dep-6-part-c", "label": "어떻게 전도하나?" },
                 { "value": "dep-6-part-d", "label": "전도의 모범" },
-                { "value": "dep-6-part-e", "label": "Bridge Illustration" }
+                { "value": "dep-6-part-e", "label": "다리 예화" }
             ]
         },
         {
